# microANN

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  uANN.c  uANN.h  uANN_config.h
cfg/: uANN_cfg.h
examples/: Makefile  example.c  uANN_extern.c
include/: uANN.h  uANN_hooks.h  uANN_types.h
source/: uANN.c
